<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/liMain"
    android:layout_height="match_parent"
    tools:context=".Prj01_BodyMassIndex">

    <EditText
        android:id="@+id/edtWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hnt_wt"
        android:inputType="number"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/hnt_htf"
        android:id="@+id/edtHeightFt"/>

    <EditText
        android:id="@+id/edtHeightIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/hnt_hti"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calculate BMI"
        android:id="@+id/btnCalculate"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFC107"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtResult"
        android:text="Result"
        android:layout_marginTop="25dp"
        android:textSize="16sp"
        android:textStyle="bold"/>
</LinearLayout>